--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
       <p>Get an overview of planned time off as tracked in <a href="https://humaans.io/">Humaans.io</a></p>
     </header>
 
-    <main id="app"></main>
+    <main id="app" class="app"></main>
 
     <footer>
       <p>Made with <a href="https://glitch.com">Glitch</a>!</p>
