--- a/src/web/components/calendar.css
+++ b/src/web/components/calendar.css
@@ -1,12 +1,11 @@
 .cal {
-	font-size: 12px;
+	font-size: 1rem;
 	line-height: 1.5rem;
 	overflow: scroll;
-	font-family: menlo;
 	display: grid;
 	grid-template-columns: 1fr;
 	background: white;
-	/* box-shadow: 0 0 10px rgba( 0,0,0,0.5 ); */
+	border: 1px solid rgba( 0,0,0,0.2 );
 	border-radius: 1px;
   }
 
@@ -14,16 +13,23 @@
 	display: grid;
 	grid-template-columns: 120px repeat( 5, 17.5rem ) auto;
 	border-bottom: 1px solid rgba( 0,0,0,0.2 );
-	min-height: 3rem;
   }
 
   .cal__header div {
-	padding: .5rem;
-	line-height: 1.5rem;
+	  padding: 0;
   }
 
   .cal__header div:not(:first-child) {
+	display: grid;
+	grid-template-columns: repeat( 7, 2.5rem );
+  }
+
+  .cal__header div:not(:first-child) span {
 	border-left: 1px solid #CCC;
+	padding: 0;
+	line-height: 2.5rem;
+	text-align: center;
+	font-weight: bold;
   }
 
   .cal__month {
@@ -87,8 +93,22 @@
   }
 
   .cal__day--is-current {
-	color: #FF0000;
-	background: rgba( 255, 0, 0, 0.1 );
+	color: rgb(59 160 44 );
+	background: rgba(59, 160, 44, 0.1 );
+	position: relative;
+  }
+
+  .cal__day--is-current::after {
+	content: ' ';
+	display: block;
+	z-index: 1;
+	position: absolute;
+	top: -1px;
+	left: -1px;
+	right: -1px;
+	bottom: -1px;
+	border: 1px solid rgba(59, 160, 44, 0.5  );
+	pointer-events: none;
   }
 
   .time-away {
